# scheduled-task-reminder

./: .gitignore  README.md  pyproject.toml
app/: auth.py  env.py  main.py  run.py  ulity.py
app/models/: models.py  mysql_config.py
app/routers/: index.py  login.py  mail.py  new_task.py  register.py  scheduled_tasks.py  single_tasks.py  user.py
app/statics/: app.js  index.html  login.html  mail.html  new_task.html  register.html  scheduled_tasks.html  single_tasks.html  user.html
app/worker/: fresher.py  mail_sender.py
